# 2048

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
shared/: CMakeLists.txt
shared/enums/: direction.h
src/: CMakeLists.txt  main.cpp
src/2048/: direction.h  game.cpp  game.h
src/Player/: player.cpp  player.h
src/shared/: direction.h
